# ImGuiNodeEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
assets/templates/: login.ng
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/Core/: Application.cpp  Application.h  NodeFactory.cpp  NodeFactory.h  PreviewHelpers.cpp  PreviewHelpers.h  PreviewRenderer.cpp  PreviewRenderer.h
src/NodeEditor/: Node.cpp  Node.h  NodeEditor.cpp  NodeEditor.h  NodeEditorActions.cpp  NodeEditorCanvas.cpp
src/nodes/containers/: ColumnNode.cpp  ColumnNode.h  ContainerNode.cpp  ContainerNode.h  RowNode.cpp  RowNode.h  WindowNode.cpp  WindowNode.h
src/nodes/output/: NodePreviewNode.cpp  NodePreviewNode.h  PreviewNode.cpp  PreviewNode.h
src/nodes/style/: ThemeNode.cpp  ThemeNode.h
src/nodes/widgets/: AnimationNode.cpp  AnimationNode.h  BadgeNode.cpp  BadgeNode.h  ButtonNode.cpp  ButtonNode.h  CheckboxNode.cpp  CheckboxNode.h  ChildNode.cpp  ChildNode.h  ColorEditNode.cpp  ColorEditNode.h  ComboBoxNode.cpp  ComboBoxNode.h  ComponentNode.cpp  ComponentNode.h  ComponentOutputNode.cpp  ComponentOutputNode.h  DragDropNode.cpp  DragDropNode.h  GridNode.cpp  GridNode.h  InputIntNode.cpp  InputIntNode.h  InputTextNode.cpp  InputTextNode.h  MenuBarNode.cpp  MenuBarNode.h  MenuItemNode.cpp  MenuItemNode.h  PopupNode.cpp  PopupNode.h  ProgressBarNode.cpp  ProgressBarNode.h  RadioButtonNode.cpp  RadioButtonNode.h  SameLineNode.cpp  SameLineNode.h  SegmentedNode.cpp  SegmentedNode.h  (+24 more)
